# simple_todo

./: Makefile  pyproject.toml
app/application/api/: lifespan.py  main.py  schemas.py
app/application/api/auth/: handlers.py
app/application/api/tasks/: filters.py  handlers.py  schemas.py
app/application/api/users/: handlers.py  schemas.py
app/domain/entities/: base.py  tasks.py  users.py
app/domain/events/: base.py  tasks.py  users.py
app/domain/exceptions/: base.py  tasks.py  users.py
app/domain/services/user/password/: base.py  password.py
app/domain/values/: base.py  tasks.py  users.py
app/infra/db/manager/: base.py  postgre.py
app/infra/db/models/: task.py  user.py
app/infra/message_broker/: base.py  kafka.py
app/infra/notificators/: base.py  email.py
app/infra/repositories/dtos/: user.py
app/infra/repositories/filters/: tasks.py
app/infra/repositories/tasks/: base.py  memory.py  postgres.py
app/infra/repositories/users/: base.py  memory.py  postgres.py
app/logic/: init.py
app/logic/commands/: auth.py  base.py  tasks.py  users.py
app/logic/events/: base.py  tasks.py  users.py
app/logic/exceptions/: base.py  mediator.py  tasks.py  users.py
app/logic/mediator/: base.py  command.py  event.py  mediator.py  query.py
app/logic/queries/: base.py  tasks.py  users.py
app/migrations/: env.py
app/migrations/versions/: 040cf8c651ba_.py  7d6c6a7e625b_.py  b93ffcc492bc_add_time_to_complete_field_to_tasks_.py  d94952b96146_.py
app/settings/: config.py
app/tests/domain/values/: test_users.py
docker_compose/: app.yaml
(+4 files in other folders)
