[tool.poetry]
name = "simple-todo"
version = "0.1.0"
description = ""
authors = ["sergey936 <s.suslakov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pytest = "^8.2.2"
faker = "^25.8.0"
punq = "^0.7.0"
pydantic-settings = "^2.3.3"
pyjwt = "^2.8.0"
passlib = "^1.7.4"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
